test/sema/negative/static.impala
static mut foo = 42;
static bar = foo;
static mut foobar = foo;

extern fn f(i: int) -> () {
    static mut j = i;
}
